# gwtf-prototype

./: .gitignore  force-results.csv  swim-simulator-proj-context.md
gui/: install-autostart.sh  requirements.txt  serial_bridge.py  server.py  simulator.py  start.sh
gui/templates/: index.html
quadrature-encoder/: DRC.rpt  quadrature-encoder-B_Mask.gbr  quadrature-encoder-F_Silkscreen.gbr  quadrature-encoder.kicad_pcb  quadrature-encoder.kicad_prl  quadrature-encoder.kicad_pro  quadrature-encoder.kicad_sch
quadrature-encoder/electronics_fab/: BOM.csv  quadrature-encoder-B_Cu.gbr  quadrature-encoder-B_Paste.gbr  quadrature-encoder-B_Silkscreen.gbr  quadrature-encoder-Edge_Cuts.gbr  quadrature-encoder-F_Cu.gbr  quadrature-encoder-F_Mask.gbr  quadrature-encoder-F_Paste.gbr  quadrature-encoder-NPTH.drl  quadrature-encoder-PTH.drl  quadrature-encoder-job.gbrjob
quadrature-encoder/footprints/: APT1608.prt.1
quadrature-encoder/footprints/swimon-lib/: LM311DR.kicad_sym  TEMT1000.kicad_sym  TSTS7100.kicad_sym
risk-reduction/arduino-IRbeambreaker/: arduino-IRbeambreaker.ino
risk-reduction/blink-esp32-s3-zero2/: Cargo.toml
risk-reduction/blink-rs/: Cargo.toml
risk-reduction/blink-rs-2/: Cargo.toml
risk-reduction/blink-rs-3-stable/: Cargo.toml  readme.md
risk-reduction/rs-IRbeambreaker/: Cargo.toml
risk-reduction/rs-IRbeambreaker-unstable/: Cargo.toml  readme.md
risk-reduction/rs-fidget-spinner/: Cargo.toml
risk-reduction/rs-interrupt-rx/: Cargo.toml
risk-reduction/rs-pulley-detect/: Cargo.toml  mechanical-design.md  timing-approach-draft.rs
(+7 files in other folders)
